Refactor code structure for improved readability and maintainability

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,13 +6,16 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "chromadb>=1.0.20",
+    "fastmcp>=2.12.3",
     "google-genai>=1.33.0",
     "jupyterlab>=4.4.7",
     "langchain-community>=0.3.29",
     "langchain-experimental>=0.3.4",
     "langchain-huggingface>=0.3.1",
     "langchain-text-splitters>=0.3.11",
+    "pydash>=8.0.5",
     "python-dotenv>=1.1.1",
+    "screen-brightness-control>=0.24.2",
     "sentence-transformers>=5.1.0",
 ]
 
